# slm-api-server

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: download_model.py
src/: api_complete.py  inference.py  server.py
src/models/: __init__.py
